<resources>
    <string name="app_name">Chat App</string>
    <string name="onboarding_subtitle">Stay connected with friends and family anytime, anywhere.</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="onboarding_illustration">Chat app illustration</string>
    <string name="welcome_chat">Welcome Chat</string>
    <string name="onboarding_subtitle_2">Join our ChatApp Community.</string>
    <string name="onboarding_illustration_2">Welcome chat illustration</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_hint">Enter your email i.e john@example.com</string>
    <string name="password_hint_signin">Enter your password</string>
    <string name="password_hint_signup">Create a strong password</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
</resources>