<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingHorizontal="@dimen/screen_horizontal_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/topImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/onboarding1"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/onboarding_illustration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/titleText"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintDimensionRatio="H,1:1"
        android:layout_marginTop="@dimen/illustration_margin_top" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/topImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="@dimen/title_margin_top" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_subtitle"
        android:textSize="@dimen/subtitle_text_size"
        android:gravity="center"
        android:textColor="@color/subtitle_gray"
        android:lineSpacingExtra="@dimen/line_spacing"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        android:layout_marginTop="@dimen/subtitle_margin_top" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStartedBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/get_started"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:cornerRadius="@dimen/button_corner_radius"
        app:backgroundTint="@color/primary_color"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/button_margin_top"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        style="@style/Widget.Material3.Button" />

    <TextView
        android:id="@+id/skipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="@dimen/skip_text_size"
        android:textColor="@color/skip_gray"
        android:padding="@dimen/skip_padding"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/skip_margin_top"
        android:layout_marginEnd="@dimen/skip_margin_end" />

    <LinearLayout
        android:id="@+id/progressContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/progress_margin_bottom">

        <View
            android:layout_width="@dimen/progress_indicator_size"
            android:layout_height="@dimen/progress_indicator_size"
            android:background="@drawable/progress_indicator_active"
            android:layout_margin="@dimen/progress_indicator_margin" />

        <View
            android:layout_width="@dimen/progress_indicator_size"
            android:layout_height="@dimen/progress_indicator_size"
            android:background="@drawable/progress_indicator_inactive"
            android:layout_margin="@dimen/progress_indicator_margin" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>